--- a/css/custom.css
+++ b/css/custom.css
@@ -775,3 +775,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(
   GradientType=0
 );
 }
+.alarmni-bg{
+background: #2b2b2b;
+background: radial-gradient(circle,rgba(43, 43, 43, 1) 0%, rgba(0, 0, 0, 1) 55%);
+}
